<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/user"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/category"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/list"
            android:title="@string/menu_product" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/message"
            android:title="@string/menu_message" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/favorite"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_meeting"
            android:icon="@drawable/calendar"
            android:title="@string/menu_meeting" />
    </group>

    <item
        android:id="@+id/other"
        android:title="Otros ">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
