<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tv_margin_y"
            android:text="@string/txt_register"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/signInButtonR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/txt_margin_x"
            android:layout_marginTop="@dimen/tv_margin_y"
            android:layout_marginEnd="@dimen/txt_margin_x"></com.google.android.gms.common.SignInButton>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_registerU_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/txt_margin_x"
            android:layout_marginTop="@dimen/txt_margin_y"
            android:layout_marginEnd="@dimen/txt_margin_x">
            <!--app:errorTextAppearance="@style/error_appearance"-->

            <EditText
                android:id="@+id/txt_registerU_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_name"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_registerU_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/txt_margin_x"
            android:layout_marginEnd="@dimen/txt_margin_x">

            <EditText
                android:id="@+id/txt_registerU_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_phone"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_registerU_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/txt_margin_x"
            android:layout_marginEnd="@dimen/txt_margin_x">

            <EditText
                android:id="@+id/txt_registerU_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_user"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_registerU_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/txt_margin_x"
            android:layout_marginEnd="@dimen/txt_margin_x">

            <EditText
                android:id="@+id/txt_registerU_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_registerU_passConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/txt_margin_x"
            android:layout_marginEnd="@dimen/txt_margin_x">

            <EditText
                android:id="@+id/txt__register_passConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_confirm"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_registerU_singin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/txt_magin_y_14"
            android:text="@string/btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/color_orangePrimary"
            android:textColor="@color/color_white"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/txt_magin_y_14"
            android:text="@string/txt_have_account" />

        <TextView
            android:id="@+id/txt_registerU_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_login"
            android:textColor="#028CF8" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>