<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/txt_margin_top"
            android:text="@string/txt_login"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/txt_margin_x"
            android:layout_marginTop="@dimen/txt_margin_x"
            android:layout_marginEnd="@dimen/txt_margin_x"></com.google.android.gms.common.SignInButton>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/txt_margin_x"
            android:layout_marginTop="@dimen/txt_margin_y"
            android:layout_marginEnd="@dimen/txt_margin_x">

            <EditText
                android:id="@+id/txt_userL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_user"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/txt_margin_x"
            android:layout_marginTop="@dimen/txt_margin_y"
            android:layout_marginEnd="@dimen/txt_margin_x">


            <EditText
                android:id="@+id/txt_passL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_logIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/txt_margin_x"
            android:text="@string/btn_login"
            android:background="@color/color_orangePrimary"
            android:textColor="@color/color_white"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/txt_margin_y"
            android:text="@string/txt_not_account" />

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_check_in"
            android:textColor="#008BFA" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>