<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.category_fragment.CategoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/padding_one"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="49dp"
            cardview:cardBackgroundColor="#FCC26F"
            cardview:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/category_one"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/txt_magin_y_14"
                android:text="@string/first_item"
                android:textAllCaps="false"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="@dimen/my_padding"
            cardview:cardBackgroundColor="#FCC26F"
            cardview:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/category_two"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/txt_magin_y_14"
                android:text="@string/second_item"
                android:textAllCaps="false"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="@dimen/my_padding"
            cardview:cardBackgroundColor="#FCC26F"
            cardview:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/category_three"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/txt_magin_y_14"
                android:text="@string/third_item"
                android:textAllCaps="false"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="@dimen/my_padding"
            cardview:cardBackgroundColor="#FCC26F"
            cardview:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/category_four"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/txt_magin_y_14"
                android:text="@string/fourth_item"
                android:textAllCaps="false"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="@dimen/my_padding"
            cardview:cardBackgroundColor="#FCC26F"
            cardview:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/category_five"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/txt_magin_y_14"
                android:text="@string/fifth_item"
                android:textAllCaps="false"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="@dimen/my_padding"
            cardview:cardBackgroundColor="#FCC26F"
            cardview:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/category_six"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/txt_magin_y_14"
                android:text="@string/sixth_item"
                android:textAllCaps="false"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="@dimen/my_padding"
            cardview:cardBackgroundColor="#FCC26F"
            cardview:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/category_seven"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/txt_magin_y_14"
                android:text="@string/seventh_item"
                android:textAllCaps="false"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="@dimen/my_padding"
            cardview:cardBackgroundColor="#FCC26F"
            cardview:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/category_eight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/txt_magin_y_14"
                android:text="@string/eight_item"
                android:textAllCaps="false"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</FrameLayout>